--- a/src/IAmBacon/IAmBacon/Content/sass/base/_grid.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_grid.scss
@@ -1,6 +1,7 @@
 ﻿//
 // Grid variables.
 // --------------------------------------------------
+/// <reference path="_variables.scss" />
 
 // Extra small devices (less than 768px) 
 // are the default styles.
