--- a/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_base.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_base.scss
@@ -2,9 +2,11 @@
 // Base
 // Imports all mixins.
 // --------------------------------------------------
-@import "clearfix";
-@import "breakpoints";
-@import "grid";
-@import "line-height";
-@import "font";
-@import "typography";
+@import 
+    "clearfix", 
+    "breakpoints", 
+    "grid", 
+    "line-height", 
+    "font", 
+    "vertical-rhythm",
+    "typography";
