--- a/src/IAmBacon/IAmBacon/Content/sass/utilities/_margin.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/utilities/_margin.scss
@@ -10,6 +10,10 @@
 	margin-bottom: $base-line-height;
 }
 
+.m-b--none {
+    margin-bottom: 0;
+}
+
 .m-t--full {
 	margin-top: $base-line-height;
 }
