--- a/src/IAmBacon/IAmBacon/Content/sass/base/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/_typography.scss
@@ -1,6 +1,7 @@
 ﻿//
 // Typography variables.
 // --------------------------------------------------
+/// <reference path="_variables.scss" />
 
 // The base font size.
 $base-font-size: 16px;
@@ -8,20 +9,19 @@ $base-font-size: 16px;
 // The base line height determines the basic unit of vertical rhythm.
 $base-line-height: 24px;
 
+// Proportion by which font-size values scale up.  
+$scale: 1.5;
+
 // The default font family.
 $base-font-family: 'Lato', sans-serif !default;
-
-// The default colours.
-$base-color: $black;
-$base-background-color: $white;
 
 // The font sizes for h1-h6.
 $h1-font-size: 3.75 * $base-font-size !default; //60px
 $h2-font-size: 3	* $base-font-size !default; //46px
 $h3-font-size: 1.5	* $base-font-size !default; //24px
 $h4-font-size: 1    * $base-font-size !default; //16px
-$h5-font-size: 0.83 * $base-font-size !default;
-$h6-font-size: 0.67 * $base-font-size !default;
+$h5-font-size: 0.87 * $base-font-size !default; //14px
+$h6-font-size: 0.69 * $base-font-size !default; //11px
 
 // The amount lists and blockquotes are indented.
 $indent-amount: 40px !default;
