--- a/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_grid.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/base/mixins/_grid.scss
@@ -10,63 +10,71 @@ $total-columns: 12;
 
 // Grid column.
 @mixin column($span) {
-	float: left;
-	width: fluid-grid($span);
-	margin-left: fluid-gutter();
-	box-sizing: border-box;
+    float: left;
+    width: fluid-grid($span);
+    margin-left: fluid-gutter();
+    box-sizing: border-box;
 
-	@if $span == 6 {
-		&:nth-of-type(odd) {					
-			margin-left: 0;
-		}
-	}
+    @if $span == 6 {
+        &:nth-of-type(odd) {
+            margin-left: 0;
+        }
+    }
 
-	@if $span == 4 { 
-		&:first-child {		
-			margin-left: 0;
-		}
-	}
+    @if $span == 4 {
+        &:first-child {
+            margin-left: 0;
+        }
+    }
 
-	@if $span == 3 {
-		&:nth-of-type(4n+1) {
-			clear: left;
-			margin-left: 0;
-		}
-	}
+    @if $span == 3 {
+        &:nth-of-type(4n+1) {
+            clear: left;
+            margin-left: 0;
+        }
+    }
 
-	@if $span == $total-columns {
-		margin-left: 0;
-	}
+    @if $span == $total-columns {
+        margin-left: 0;
+    }
+}
+
+// Removes the gutter.
+@mixin column-no-gutter($span) {
+    @include column($span);
+    margin-left: 0;
 }
 
 // Grid container.
 @mixin container() {
-	@include clearfix;
-	box-sizing: border-box;
+    @include clearfix;
+    box-sizing: border-box;
 }
 
-//Functions
+// Functions
+// ------------------------
+
 // Returns the width of the column including gutters.
 @function column-width($columns) {
-	@return ($columns * $column-width) + (($columns - 1) * $gutter-width);
+    @return ($columns * $column-width) + (($columns - 1) * $gutter-width);
 }
 
 // Returns the total width of the column container.
 @function container-width() {
-	@return ($total-columns * $column-width) + (($total-columns - 1) * $gutter-width);
+    @return ($total-columns * $column-width) + (($total-columns - 1) * $gutter-width);
 }
 
 // Returns the column width as a percentage.
 @function fluid-grid($columns) {
-	@return percentage(column-width($columns) / container-width());
+    @return percentage(column-width($columns) / container-width());
 }
 
 // Returns the gutter width as a percentage.
 @function fluid-gutter() {
-	@return percentage(gutter-width());
+    @return percentage(gutter-width());
 }
 
 // Returns the gutter width.
 @function gutter-width() {
-	@return $gutter-width / container-width();
+    @return $gutter-width / container-width();
 }
