--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/landingpage.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/landingpage.css
@@ -1,79 +1,376 @@
-/*$base-line-height: 2;*/
-.listInline > li {
-  display: inline-block; }
-
+/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+/**
+ * 1. Set default font family to sans-serif.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
 html {
-  font-size: 62.5%; }
+  font-family: sans-serif;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */ }
 
+/**
+ * Remove default margin.
+ */
 body {
-  font-family: 'Lato', sans-serif;
-  color: #333333;
-  background-color: #FFFFFF;
-  font-size: 1.6rem;
-  line-height: 1.5; }
+  margin: 0; }
 
-.h1 {
-  font-size: 24px !important;
-  font-size: 2.4rem !important; }
-  @media screen and (min-width: 54.1rem) {
-    .h1 {
-      font-size: 36px !important;
-      font-size: 3.6rem !important; } }
+/* HTML5 display definitions
+   ========================================================================== */
+/**
+ * Correct `block` display not defined for any HTML5 element in IE 8/9.
+ * Correct `block` display not defined for `details` or `summary` in IE 10/11 and Firefox.
+ * Correct `block` display not defined for `main` in IE 11.
+ */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
+  display: block; }
 
-h2 {
-  font-size: 2rem; }
-  @media screen and (min-width: 54.1rem) {
-    h2 {
-      font-size: 4.8rem; } }
+/**
+ * 1. Correct `inline-block` display not defined in IE 8/9.
+ * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
+ */
+audio, canvas, progress, video {
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */ }
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+/**
+ * Address `[hidden]` styling not present in IE 8/9/10.
+ * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
+ */
+[hidden], template {
+  display: none; }
+
+/* Links
+   ========================================================================== */
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+a {
+  background: transparent; }
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+a:active, a:hover {
+  outline: 0; }
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+ */
+abbr[title] {
+  border-bottom: 1px dotted; }
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+ */
+b, strong {
+  font-weight: bold; }
+
+/**
+ * Address styling not present in Safari and Chrome.
+ */
+dfn {
+  font-style: italic; }
+
+/**
+ * Address variable `h1` font-size and margin within `section` and `article`
+ * contexts in Firefox 4+, Safari, and Chrome.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+/**
+ * Address styling not present in IE 8/9.
+ */
+mark {
+  background: #ff0;
+  color: #000; }
+
+/**
+ * Address inconsistent and variable font size in all browsers.
+ */
+small {
+  font-size: 80%; }
+
+/**
+ * Prevent `sub` and `sup` affecting `line-height` in all browsers.
+ */
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sup {
+  top: -0.5em; }
+
+sub {
+  bottom: -0.25em; }
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove border when inside `a` element in IE 8/9/10.
+ */
+img {
+  border: 0; }
+
+/**
+ * Correct overflow not hidden in IE 9/10/11.
+ */
+svg:not(:root) {
+  overflow: hidden; }
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * Address margin not present in IE 8/9 and Safari.
+ */
+figure {
+  margin: 1em 40px; }
+
+/**
+ * Address differences between Firefox and other browsers.
+ */
+hr {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0; }
+
+/**
+ * Contain overflow in all browsers.
+ */
+pre {
+  overflow: auto; }
+
+/**
+ * Address odd `em`-unit font size rendering in all browsers.
+ */
+code, kbd, pre, samp {
+  font-family: monospace, monospace;
+  font-size: 1em; }
+
+/* Forms
+   ========================================================================== */
+/**
+ * Known limitation: by default, Chrome and Safari on OS X allow very limited
+ * styling of `select`, unless a `border` property is set.
+ */
+/**
+ * 1. Correct color not being inherited.
+ *    Known issue: affects color of disabled elements.
+ * 2. Correct font properties not being inherited.
+ * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
+ */
+button, input, optgroup, select, textarea {
+  color: inherit;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+  margin: 0;
+  /* 3 */ }
+
+/**
+ * Address `overflow` set to `hidden` in IE 8/9/10/11.
+ */
+button {
+  overflow: visible; }
+
+/**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
+ * Correct `select` style inheritance in Firefox.
+ */
+button, select {
+  text-transform: none; }
+
+/**
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Correct inability to style clickable `input` types in iOS.
+ * 3. Improve usability and consistency of cursor style between image-type
+ *    `input` and others.
+ */
+button, html input[type="button"], input[type="reset"], input[type="submit"] {
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */ }
+
+/**
+ * Re-set default cursor for disabled elements.
+ */
+button[disabled], html input[disabled] {
+  cursor: default; }
+
+/**
+ * Remove inner padding and border in Firefox 4+.
+ */
+button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+/**
+ * Address Firefox 4+ setting `line-height` on `input` using `!important` in
+ * the UA stylesheet.
+ */
+input {
+  line-height: normal; }
+
+/**
+ * It's recommended that you don't attempt to style these elements.
+ * Firefox's implementation doesn't respect box-sizing, padding, or width.
+ *
+ * 1. Address box sizing set to `content-box` in IE 8/9/10.
+ * 2. Remove excess padding in IE 8/9/10.
+ */
+input[type="checkbox"], input[type="radio"] {
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
+
+/**
+ * Fix the cursor style for Chrome's increment/decrement buttons. For certain
+ * `font-size` values of the `input`, it causes the cursor style of the
+ * decrement button to change from `default` to `text`.
+ */
+input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
+  height: auto; }
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
+ *    (include `-moz` to future-proof).
+ */
+input[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  -moz-box-sizing: content-box;
+  /* 2 */
+  box-sizing: content-box; }
+
+/**
+ * Remove inner padding and search cancel button in Safari and Chrome on OS X.
+ * Safari (but not Chrome) clips the cancel button when the search input has
+ * padding (and `textfield` appearance).
+ */
+input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+/**
+ * Define consistent border, margin, and padding.
+ */
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em; }
+
+/**
+ * 1. Correct `color` not being inherited in IE 8/9/10/11.
+ * 2. Remove padding so people aren't caught out if they zero out fieldsets.
+ */
+legend {
+  border: 0;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
+
+/**
+ * Remove default vertical scrollbar in IE 8/9/10/11.
+ */
+textarea {
+  overflow: auto; }
+
+/**
+ * Don't inherit the `font-weight` (applied by a rule above).
+ * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
+ */
+optgroup {
+  font-weight: bold; }
+
+/* Tables
+   ========================================================================== */
+/**
+ * Remove most spacing between table cells.
+ */
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+td, th {
+  padding: 0; }
+
+ul, ol {
+  list-style-type: none; }
+
+ul, ol {
+  padding: 0; }
+
+ul, ol, h1, h2, p, dl, dd {
+  margin: 0; }
+
+a {
+  text-decoration: none;
+  color: inherit;
+  display: inline-block; }
+  a:hover {
+    color: #83D6DE; }
 
 img {
   max-width: 100%;
   vertical-align: middle; }
 
-h1, h2, ul {
-  margin: 0; }
+h3 {
+  font-size: inherit; }
 
-ul, ol {
-  list-style-type: none;
-  padding-left: 0; }
+html {
+  font-size: 62.5%; }
 
-label, input[type=submit] {
-  display: block;
-  margin-top: 1em; }
-
-input[type=text], input[type=email], input[type=url], textarea {
-  width: 100%;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-input[type=text], input[type=email], input[type=url] {
-  height: 2em; }
-
-textarea {
-  height: 7em;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em; }
-
-a {
-  text-decoration: none;
-  color: inherit; }
-  a:hover {
-    color: #63B7F6; }
+body {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  font-family: 'Lato', sans-serif;
+  color: #333333;
+  background-color: #FFFFFF; }
 
 blockquote {
-  font-family: Georgia, serif;
-  font-style: italic;
-  font-size: 2rem; }
+  font-style: italic; }
 
-.wrapper {
-  margin: 0 auto;
-  text-align: left;
-  max-width: 1440px; }
+meter {
+  -webkit-appearance: none;
+  display: block;
+  width: 100%; }
 
-.link {
-  text-decoration: underline; }
+meter::-webkit-meter-bar {
+  background: #F5F4F3;
+  height: 7px;
+  width: 100%; }
+
+meter::-webkit-meter-optimum-value {
+  background-image: none;
+  background-color: #83D6DE; }
+
+.listInline > li {
+  display: inline-block; }
 
 .header {
   border-bottom: 10px solid #60646D; }
@@ -167,6 +464,23 @@ blockquote {
   display: inline-block;
   height: 48px; }
 
+.asideNav-title {
+  font-size: 24px;
+  line-height: 2;
+  color: #FFFFF7;
+  background-color: #60646D;
+  padding-left: 20px; }
+.asideNav-items {
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow: hidden; }
+.asideNav-item {
+  line-height: 1.5;
+  margin-top: 12px; }
+  .asideNav-item-count {
+    float: right;
+    color: #999999; }
+
 .pageTitle {
   background-color: #83D6DE;
   position: relative; }
@@ -253,9 +567,13 @@ blockquote {
   line-height: 1.5; }
 
 .h2 {
-  font-size: 4.8rem;
-  font-weight: 700;
-  line-height: 1.5; }
+  font-size: 2.4rem;
+  line-height: 1.5;
+  font-weight: 700; }
+  @media only screen and (min-width: 768px) {
+    .h2 {
+      font-size: 4.8rem;
+      line-height: 1.5; } }
 
 .h3 {
   font-size: 2.4rem;
@@ -280,6 +598,9 @@ blockquote {
   border: 0 !important;
   clip: rect(1px, 1px, 1px, 1px) !important; }
 
+.link {
+  text-decoration: underline; }
+
 .social {
   background-image: url(../../../images/social.png);
   background-repeat: no-repeat;
@@ -295,11 +616,17 @@ blockquote {
   .social.twitter {
     background-position: 0 -99px; }
 
+.block {
+  display: block; }
+
 .m-r--full {
   margin-right: 24px; }
 
 .m-b--full {
   margin-bottom: 24px; }
+
+.m-b--none {
+  margin-bottom: 0; }
 
 .m-t--full {
   margin-top: 24px; }
@@ -308,7 +635,55 @@ blockquote {
   margin-top: 24px;
   margin-bottom: 24px; }
 
-.subTitle {
-  padding-top: 48px; }
+.g-landing {
+  -moz-box-sizing: border-box;
+       box-sizing: border-box; }
+  .g-landing:before, .g-landing:after {
+    content: " ";
+    display: table; }
+  .g-landing:after {
+    clear: both; }
+  .g-landing-content {
+    padding-top: 36px; }
+    @media only screen and (max-width: 767px) {
+      .g-landing-content {
+        float: left;
+        width: 100%;
+        margin-left: 2.2988505747%;
+        -moz-box-sizing: border-box;
+             box-sizing: border-box;
+        margin-left: 0; } }
+    @media only screen and (min-width: 992px) {
+      .g-landing-content {
+        float: left;
+        width: 57.3754789272%;
+        margin-left: 2.2988505747%;
+        -moz-box-sizing: border-box;
+             box-sizing: border-box;
+        margin-left: 0; } }
+  .g-landing-aside {
+    margin-bottom: 24px; }
+    @media only screen and (max-width: 767px) {
+      .g-landing-aside {
+        float: left;
+        width: 100%;
+        margin-left: 2.2988505747%;
+        -moz-box-sizing: border-box;
+             box-sizing: border-box;
+        margin-left: 0; } }
+    @media only screen and (min-width: 992px) {
+      .g-landing-aside {
+        float: left;
+        width: 40.3256704981%;
+        margin-left: 2.2988505747%;
+        -moz-box-sizing: border-box;
+             box-sizing: border-box;
+        margin-top: 108px; } }
+
+.post {
+  margin-bottom: 24px; }
+  .post p {
+    margin-top: 1em;
+    margin-bottom: 1em; }
 
 /*# sourceMappingURL=landingpage.css.map */
