Fallback for meter tag

--- a/src/IAmBacon/IAmBacon/Content/sass/pages/post/landingpage.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/pages/post/landingpage.scss
@@ -17,6 +17,7 @@
     "../../components/footer",
     "../../components/links-list",
     "../../components/aside-nav",
+    "../../components/meter",
     "../../components/page-title";
 
 // Utilities
