--- a/src/IAmBacon/IAmBacon/Content/sass/components/_aside-nav.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/components/_aside-nav.scss
@@ -19,6 +19,7 @@
         padding-left: 20px;
         padding-right: 20px;
         overflow: hidden;
+        margin-bottom: vr-space(2);
     }
 
     &-item {
