--- a/src/IAmBacon/IAmBacon/Content/sass/pages/post/landingpage.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/pages/post/landingpage.scss
@@ -18,6 +18,7 @@
     "../../components/links-list",
     "../../components/aside-nav",
     "../../components/meter",
+    "../../components/buttons",
     "../../components/page-title";
 
 // Utilities
