--- a/src/IAmBacon/IAmBacon/Views/Post/Landing.cshtml
+++ b/src/IAmBacon/IAmBacon/Views/Post/Landing.cshtml
@@ -24,6 +24,10 @@
             <ol class="asideNav-items">
                 @Html.DisplayFor(x => x.CategorySummaries)
             </ol>
+            <h2 class="asideNav-title">Tags</h2>
+            <ol class="asideNav-items">
+                @Html.DisplayFor(x => x.Tags)
+            </ol>
         </aside>
     </div>
 </div>
