--- a/src/IAmBacon/IAmBacon/Content/sass/utilities/_typography.scss
+++ b/src/IAmBacon/IAmBacon/Content/sass/utilities/_typography.scss
@@ -10,10 +10,10 @@
     @include line-height-proportional;
 }
 
-.h2 {    
+.h2 {
     @include font-size($h3-font-size);
     @include vr-line-height($h3-font-size, 1.5);
-    font-weight: 700;    
+    font-weight: 700;
 
     @include respond-to(small-up) {
         @include font-size($h2-font-size);
@@ -46,6 +46,13 @@
 
 // Sets text decoration for text links.
 .link {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
+// Set behaviour for title links.
+.linkTitle {
+    &:hover {
+        text-decoration: underline;
+        color: inherit;
+    }
+}
