--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/home/home.css
@@ -574,6 +574,10 @@ meter::-webkit-meter-optimum-value {
 .link {
   text-decoration: underline; }
 
+.linkTitle:hover {
+  text-decoration: underline;
+  color: inherit; }
+
 .co {
   overflow: hidden; }
 
@@ -603,6 +607,8 @@ meter::-webkit-meter-optimum-value {
 
 .m-r--full {
   margin-right: 24px; }
+.m-r--half {
+  margin-right: 12px; }
 
 .m-b--full {
   margin-bottom: 24px; }
