--- a/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/post.css
+++ b/src/IAmBacon/IAmBacon/Content/stylesheets/pages/post/post.css
@@ -681,6 +681,10 @@ code {
 .link {
   text-decoration: underline; }
 
+.linkTitle:hover {
+  text-decoration: underline;
+  color: inherit; }
+
 .social {
   background-image: url(../../../images/social.png);
   background-repeat: no-repeat;
@@ -698,6 +702,8 @@ code {
 
 .m-r--full {
   margin-right: 24px; }
+.m-r--half {
+  margin-right: 12px; }
 
 .m-b--full {
   margin-bottom: 24px; }
